Fix: wallet address alignment again

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -116,7 +116,7 @@
 }
 
 .walletAddress > span {
-  line-height: 24px;
+  line-height: 26px;
 }
 
 .walletAddress:hover {
